--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -16,7 +16,29 @@
   row-gap: 10px;
   color: black;
   transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  animation-name: appear;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
+  animation-delay: 1s;
 }
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  33% {
+    opacity: 0.33;
+  }
+  66% {
+    opacity: 0.66;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .item:hover {
   border-color: yellow;
+}
+.container {
+  min-height: 100vh;
 }
