--- a/src/index.css
+++ b/src/index.css
@@ -113,3 +113,8 @@ address {
     background-color: #f9f9f9;
   }
 }
+@media (prefers-color-scheme: dark) {
+  :root {
+    background-color: #161616;
+  }
+}
