--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -17,9 +17,9 @@
   color: black;
   transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
   animation-name: appear;
-  animation-duration: 1s;
-  animation-timing-function: ease-in-out;
-  animation-delay: 1s;
+  animation-duration: 300ms;
+  animation-timing-function: ease;
+  /* animation-delay: 1s; */
 }
 @keyframes appear {
   0% {
